style: fixing vertical spacings for vertical section variant

--- a/src/components/base/Section/Section.module.scss
+++ b/src/components/base/Section/Section.module.scss
@@ -71,4 +71,15 @@
       margin-block: 0 px-to-rem(var(--section-inside-s));
     }
   }
+
+  // Fullbleed/Vertical variant
+  &.fullBleed {
+    display: flex;
+    flex-direction: column;
+    row-gap: px-to-rem(var(--inside-elements-l));
+
+    .subtitle {
+      margin-block-end: px-to-rem(var(--inside-elements-s), true);
+    }
+  }
 }
