--- a/src/styles/css-variables/_spacings.scss
+++ b/src/styles/css-variables/_spacings.scss
@@ -92,6 +92,7 @@
     --inside-elements-xs: var(--spacing-s);
     --inside-elements-s: var(--spacing-m);
     --inside-elements-m: var(--spacing-xl);
+    --inside-elements-l: var(--spacing-2xl);
     --teaser-between-s: var(--spacing-xl);
     --section-top: var(--spacing-6xl);
     --section-bottom: var(--spacing-7xl);
